less_45/net-policy/redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-redis
  namespace: net-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: cache
        image: redis
        ports:
          - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: demo-redis-service
  namespace: net-demo
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP
