less_45/net-policy/ws.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-ws
  namespace: net-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ws
  template:
    metadata:
      labels:
        app: ws
    spec:
      containers:
      - name: proxy
        image: nginx
        ports:
          - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: demo-ws-service
  namespace: net-demo
spec:
  selector:
    app: ws
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
